tests/errors/bundle/bundle.expect
---CODE---
1
---STDERR---
error: out of bounds access of bundle
   ┌─ tests/errors/bundle/bundle.fil:10:5
   │
 9 │     bundle f[N]: for<k> ['G+k, 'G+k+1] W;
   │            - dimension 0 has length N
10 │     f{1} = input;
   │     ^^^^ out of bounds access

error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/bundle/bundle.fil:10:12
   │
10 │     f{1} = input;
   │            ^^^^^
   │            │
   │            source is available for ['G, 'G+1]
   │            required for ['G+1, 'G+2]

error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/bundle/bundle.fil:13:16
   │
13 │         f{i} = d.out;
   │                ^^^^^
   │                │
   │                source is available for ['G+i+1, 'G+i+2]
   │                required for ['G+i, 'G+i+1]

error: out of bounds access of bundle
   ┌─ tests/errors/bundle/bundle.fil:15:11
   │
 9 │     bundle f[N]: for<k> ['G+k, 'G+k+1] W;
   │            - dimension 0 has length N
   ·
15 │     out = f{N+1};
   │           ^^^^^^ out of bounds access

error: source port does not provide value for as long as destination requires
   ┌─ tests/errors/bundle/bundle.fil:15:11
   │
15 │     out = f{N+1};
   │           ^^^^^^
   │           │
   │           source is available for ['G+N+1, 'G+N+1+1]
   │           required for ['G+N, 'G+N+1]

Compilation failed with 5 errors.
Run with --show-models to generate assignments for failing constraints.
